add_executable(lpconvert lpconvert.cpp)
target_link_libraries(lpconvert libpotassco)
set_target_properties(lpconvert PROPERTIES FOLDER exe)
if (NOT CMAKE_INSTALL_BINDIR)
	message(STATUS "BINDIR not set - using bin")
	set(CMAKE_INSTALL_BINDIR "bin")
endif()
install(TARGETS lpconvert EXPORT lpconvert DESTINATION ${CMAKE_INSTALL_BINDIR})
